Fixed double spacing at the bottom of menu

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -28,10 +28,7 @@
 }
 
 .menu__cards {
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 100px auto 0 auto;
     gap: 100px;
     display: flex;
     flex-wrap: wrap;
